Improving pom.xml